Update image source in yes.html

--- a/yes.html
+++ b/yes.html
@@ -42,7 +42,7 @@
     <p>Best decision ever 😘</p>
 
     <!-- Replace image URL if you want -->
-    <img src="https://i.pinimg.com/564x/4b/7a/ef/4b7aef3b1ffb3f5c90f87b88b7e6c5c8.jpg" alt="Cute Image">
+    <img src="vinnu_bindhu.jpeg" alt="Bindhu" width="200">
 
     <h3>I love u 💕</h3>
   </div>
